--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     },
     "autoload": {
         "psr-4": {
-            "hello\\": "src/"
+            "d8q8\\hello\\": "src/"
         }
     },
     "license": "MIT",
